--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,7 @@
 [theme]
-primaryColor = "#ffcccc"
-backgroundColor = "#6b2929"
-secondaryBackgroundColor = "#d19b96"
-textColor = "#ffffff"
-font = "sans serif"
+base="dark"
+primaryColor="#ffcccc"
+backgroundColor="#6b2929"
+secondaryBackgroundColor="#d19b96"
+textColor="#ffffff"
+font="sans serif"
